--- a/sectional.html
+++ b/sectional.html
@@ -81,9 +81,13 @@
                             <span class="text-sm ${mock.attempted ? 'text-green-500' : 'text-amber-500'} mr-4">
                                 ${mock.attempted ? 'Attempted' : 'Not Attempted'}
                             </span>
-                            <button class="text-indigo-600 hover:text-indigo-800 text-sm font-medium" 
+                            <button class="text-indigo-600 hover:text-indigo-800 text-sm font-medium mr-2" 
                                     onclick="openMock('${mock.name}', 'sectional')">
                                 Open
+                            </button>
+                            <button class="text-red-600 hover:text-red-800 text-sm font-medium" 
+                                    onclick="deleteMock('${mock.name}', 'sectional')">
+                                Delete
                             </button>
                         </div>
                     </div>
@@ -168,15 +172,28 @@
                             <span class="text-sm ${mock.attempted ? 'text-green-500' : 'text-amber-500'} mr-4">
                                 ${mock.attempted ? 'Attempted' : 'Not Attempted'}
                             </span>
-                            <button class="text-indigo-600 hover:text-indigo-800 text-sm font-medium" 
+                            <button class="text-indigo-600 hover:text-indigo-800 text-sm font-medium mr-2" 
                                     onclick="openMock('${mock.name}', 'sectional')">
                                 Open
+                            </button>
+                            <button class="text-red-600 hover:text-red-800 text-sm font-medium" 
+                                    onclick="deleteMock('${mock.name}', 'sectional')">
+                                Delete
                             </button>
                         </div>
                     </div>
                 `;
                 container.appendChild(mockEl);
             });
+        }
+
+        // Delete mock
+        function deleteMock(name, category) {
+            if (confirm(`Are you sure you want to delete "${name}"?`)) {
+                mockData[category] = mockData[category].filter(m => m.name !== name);
+                localStorage.setItem('mockData', JSON.stringify(mockData));
+                displayMocks();
+            }
         }
 
         // Initialize
