--- a/prelims.html
+++ b/prelims.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prelims Mocks</title>
+    <title>Sectional Mocks</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -31,8 +31,15 @@
 <body class="min-h-screen">
     <div class="container mx-auto px-4 py-8">
         <header class="mb-8">
-            <h1 class="text-3xl font-bold text-indigo-600">Sectional Mocks</h1>
-            <p class="text-gray-600">List of all section-wise practice tests</p>
+            <div class="flex justify-between items-center">
+                <div>
+                    <h1 class="text-3xl font-bold text-indigo-600">Prelims Mocks</h1>
+                    <p class="text-gray-600">List of all preliminary examination tests</p>
+                </div>
+                <a href="index.html" class="bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-lg">
+                    Back to Home
+                </a>
+            </div>
         </header>
 
         <div class="bg-white rounded-lg shadow p-6">
@@ -59,7 +66,11 @@
 
     <script>
         // Load mock data
-        const mockData = JSON.parse(localStorage.getItem('mockData')) || { sectional: [] };
+        const mockData = JSON.parse(localStorage.getItem('mockData')) || { 
+            prelims: [],
+            mains: [],
+            sectional: [] 
+        };
         
         // Display mocks
         function displayMocks() {
@@ -71,7 +82,7 @@
                 return;
             }
             
-            mockData.sectional.forEach(mock => {
+            mockData[category].forEach(mock => {
                 const mockEl = document.createElement('div');
                 mockEl.className = `mock-item p-3 rounded ${mock.attempted ? 'attempted' : 'not-attempted'}`;
                 mockEl.innerHTML = `
