--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <!-- Folder Navigation -->
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
-                <div class="folder-card bg-white rounded-lg shadow-lg overflow-hidden cursor-pointer" onclick="window.open('prelims.html', '_blank')">
+                <div class="folder-card bg-white rounded-lg shadow-lg overflow-hidden cursor-pointer" onclick="window.location.href='prelims.html'">
                     <div class="p-6 bg-indigo-50">
                         <div class="flex items-center justify-center mb-4">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
 
-                <div class="folder-card bg-white rounded-lg shadow-lg overflow-hidden cursor-pointer" onclick="window.open('mains.html', '_blank')">
+<div class="folder-card bg-white rounded-lg shadow-lg overflow-hidden cursor-pointer" onclick="window.location.href='mains.html'">
                     <div class="p-6 bg-indigo-50">
                         <div class="flex items-center justify-center mb-4">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -107,7 +107,7 @@
                     </div>
                 </div>
 
-                <div class="folder-card bg-white rounded-lg shadow-lg overflow-hidden cursor-pointer" onclick="window.open('sectional.html', '_blank')">
+                <div class="folder-card bg-white rounded-lg shadow-lg overflow-hidden cursor-pointer" onclick="window.location.href='mains.html'">
                     <div class="p-6 bg-indigo-50">
                         <div class="flex items-center justify-center mb-4">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
