--- a/prelims.html
+++ b/prelims.html
@@ -139,7 +139,7 @@
                 
                 mockData.sectional.push({
                     name: mockName,
-                    path: mockUrl,
+                    content: fileContent,
                     attempted: false,
                     lastViewed: null
                 });
