--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
                     </div>
                 </div>
 
-                <div class="folder-card bg-white rounded-lg shadow-lg overflow-hidden cursor-pointer" onclick="window.location.href='Sectional.html'">
+                <div class="folder-card bg-white rounded-lg shadow-lg overflow-hidden cursor-pointer" onclick="window.location.href='sectional.html'">
                     <div class="p-6 bg-indigo-50">
                         <div class="flex items-center justify-center mb-4">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m-9 1V7a2 2 0 012-2h6l2 2h6a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
                             </svg>
                         </div>
-                        <h2 class="text-xl font-bold text-center text-gray-800"></h2>
+                        <h2 class="text-xl font-bold text-center text-gray-800">Sectional</h2>
                         <p class="text-sm text-center text-gray-600 mt-2">Section-wise practice tests</p>
                     </div>
                 </div>
