--- a/mains.html
+++ b/mains.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mains Mocks</title>
+    <title>mains Mocks</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -34,8 +33,8 @@
         <header class="mb-8">
             <div class="flex justify-between items-center">
                 <div>
-                    <h1 class="text-3zl font-bold text-indigo-600">Mains Mocks</h1>
-                    <p class="text-gray-600">List of all main examination tests</p>
+                    <h1 class="text-3zl font-bold text-indigo-600">mains Mocks</h1>
+                    <p class="text-gray-600">List of all section-wise practice tests</p>
                 </div>
                 <a href="index.html" class="bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-lg">
                     Back to Home
@@ -70,10 +69,9 @@
         const category = 'mains';
         
         // Load mock data
-        const mockData = JSON.parse(localStorage.getItem('mockData')) || { 
-            prelims: [],
-            mains: [],
-            sectional: [] 
+        // Initialize storage for this category only
+        const mockData = {
+            [category]: JSON.parse(localStorage.getItem(`mockData_mains`)) || []
         };
         
         // Display mocks
@@ -97,11 +95,11 @@
                                 ${mock.attempted ? 'Attempted' : 'Not Attempted'}
                             </span>
                             <button class="text-indigo-600 hover:text-indigo-800 text-sm font-medium mr-2" 
-                                    onclick="openMock('${mock.name}', 'mains')">
+                                    onclick="openMock('${mock.name}', '${category}')">
                                 Open
                             </button>
                             <button class="text-red-600 hover:text-red-800 text-sm font-medium" 
-                                    onclick="deleteMock('${mock.name}', 'mains')">
+                                    onclick="deleteMock('${mock.name}', '${category}')">
                                 Delete
                             </button>
                         </div>
@@ -121,7 +119,7 @@
                     window.open(URL.createObjectURL(blob), '_blank');
                     mock.lastViewed = new Date().toISOString().split('T')[0];
                     mock.attempted = true;
-                    localStorage.setItem('mockData', JSON.stringify(mockData));
+                    localStorage.setItem(`mockData_${category}`, JSON.stringify(mockData[category]));
                     displayMocks();
                 }
             } else {
@@ -146,7 +144,7 @@
                     attempted: false,
                     lastViewed: null
                 });
-                localStorage.setItem('mockData', JSON.stringify(mockData));
+                localStorage.setItem(`mockData_${category}`, JSON.stringify(mockData[category]));
                 displayMocks();
                 alert("Mock uploaded successfully!");
             };
